syntax = "proto3";

package template_service_v1;

service TemplateServiceV1 {
  rpc GetTemplate(TemplateId) returns (Template) {}

  rpc ListTemplates(ListTemplatesMessage) returns (TemplateList) {}

  rpc DeleteTemplate(TemplateId) returns (Template) {}

  rpc CreateTemplate(CreateTemplateMessage) returns (Template) {}
}

message TemplateId {
  string id = 1;
}

message ListTemplatesMessage {
  optional string query = 1;
}

message TemplateList {
  repeated Template templates = 1;
}

message Template {
  string id = 1;
  string name = 2;
  string image = 3;
  uint64 created_at = 4;
  uint64 updated_at = 5;
}

message CreateTemplateMessage {
  string name = 1;
  string image = 2;
}
